--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/DannieDigital/project-2#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "passport": "^0.4.1",
     "sequelize": "^5.21.11"
   }
