--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "homepage": "https://github.com/DannieDigital/project-2#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
     "passport": "^0.4.1",
-    "sequelize": "^5.21.11"
+    "sequelize": "^5.21.12"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.5.1"
   }
 }
