--- a/config/config.json
+++ b/config/config.json
@@ -20,7 +20,14 @@
     "database": "database_test",
     "host": "127.0.0.1",
 
- 
+  "test": {
+    "username": "root",
+    "password": "",
+    "database": "database_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql",
+    "operatorsAliases": false
+  },
 
   "production": {
     "username": "d7ifr6l7eoaulyjb",
