--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-authenticate": "^1.2.0",
     "sequelize": "^5.21.12"
   },
   "devDependencies": {
