--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "project_2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Dev Dec",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "debugger": "DEBUG=*:* nodemon server.js",
+    "prod": "NODE_ENV=production node server.js",
+    "deploy": "cd client && yarn build && cp -a ./build/ ../public/",
+    "heroku-postbuid" : "cross-env NODE_ENV=production WEBPACK_CONFIG=browser_prod,server_prod webpack --colors"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DannieDigital/project-2.git"
-  },
+
   "author": "Digital Designs",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DannieDigital/project-2/issues"
-  },
-  "homepage": "https://github.com/DannieDigital/project-2#readme",
   "dependencies": {
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
