--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "url": "git+https://github.com/DannieDigital/project-2.git"
   },
   "engines": {
-    "node": "8.5.0",
-    "yarn": "1.3.2"
+    "node": "12.11.1"
   },
   "author": "Digital Designs",
   "license": "ISC",
