--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Dev Dec",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "debugger": "DEBUG=*:* nodemon server.js",
-    "prod": "NODE_ENV=production node server.js",
-    "deploy": "cd client && yarn build && cp -a ./build/ ../public/",
-    "heroku-postbuid": "cross-env NODE_ENV=production WEBPACK_CONFIG=browser_prod,server_prod webpack --colors"
+    "dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"test": "react-scripts test --env=jsdom",
+"eject": "react-scripts eject",
+"heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -34,7 +33,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-authenticate": "^1.2.0",
-    "sequelize": "^5.21.12"
+    "sequelize": "^5.21.12",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "sequelize-cli": "^5.5.1"
