--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project_2",
   "version": "1.0.0",
   "description": "Dev Dec",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -26,18 +26,24 @@
   },
   "homepage": "https://github.com/DannieDigital/project-2#readme",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.1",
+    "http-errors": "^1.7.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-authenticate": "^1.2.0",
+    "pino": "^6.3.2",
+    "pino-http": "^5.2.0",
+    "pino-pretty": "^4.0.0",
     "sequelize": "^5.21.12",
     "serve": "^11.3.2"
   },
   "devDependencies": {
     "sequelize-cli": "^5.5.1"
-  }
+  },
+  "keywords": []
 }
