clean up libaries

--- a/config/config.json
+++ b/config/config.json
@@ -21,8 +21,7 @@
     "username": "d7ifr6l7eoaulyjb",
     "password": "dlwnewh8ti7pzegh",
     "database": "xwa62xz5osjyna8t",
-    "use_env_variable": "mysql://d7ifr6l7eoaulyjb:dlwnewh8ti7pzegh@qf5dic2wzyjf1x5x.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xwa62xz5osjyna8t",
-    "host": "",
+    "host": "qf5dic2wzyjf1x5x.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
     "operatorsAliases": false
   }
