--- a/config/config.json
+++ b/config/config.json
@@ -1,19 +1,28 @@
 {
   "development": {
     "username": "root",
-    "password": "MarlieJade",
+    "password": "root",
     "database": "project",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
   },
+
   "test": {
     "username": "root",
-    "password": "MarlieJade",
+    "password": "",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
+  },
+
+  "production": {
+    "username": "d7ifr6l7eoaulyjb",
+    "password": "dlwnewh8ti7pzegh",
+    "database": "xwa62xz5osjyna8t",
+    "host": "qf5dic2wzyjf1x5x.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "dialect": "mysql",
+    "operatorsAliases": false
   }
- 
 }
