--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "Digital Designs",
   "license": "ISC",
   "dependencies": {
+    "console-table": "^0.1.2",
+    "console.table": "^0.10.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.1",
